@startuml final_class_diagram

skinparam classAttributeIconSize 0
skinparam classFontSize 14
skinparam classFontStyle bold

abstract class Price {
    {abstract} +get_price_code() : int
}

class RegularPrice {
    +get_price_code() : int
}

class NewReleasePrice {
    +get_price_code() : int
}

class ChildrensPrice {
    +get_price_code() : int
}

Price <|-- RegularPrice
Price <|-- NewReleasePrice
Price <|-- ChildrensPrice

class Movie {
    {static} +REGULAR : int = 0
    {static} +NEW_RELEASE : int = 1
    {static} +CHILDRENS : int = 2
    -_title : str
    -_price : Price
    +__init__(title, price_code)
    +get_title() : str
    +get_price_code() : int
    +set_price_code(price_code: int)
    +get_charge(days_rented: int) : float
}

class Rental {
    -_movie : Movie
    -_days : int
    +__init__(movie: Movie, days_rented: int)
    +get_days_rented() : int
    +get_movie() : Movie
    +get_charge() : float
    +get_frequent_renter_points() : int
}

class Customer {
    -name : str
    -rentals : List<Rental>
    +__init__(name: str)
    +get_name() : str
    +add_rental(rental: Rental)
    -_get_total_charge() : float
    +statement() : str
}

Movie "1" --> "1" Price : _price >
Customer "1" o-- "0..*" Rental : rentals >
Rental "1" --> "1" Movie : _movie >

@enduml
